--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -100,6 +100,7 @@
   <h1>Welcome to<br>The Elite Dream Builders</h1>
 
   <div class="btn-group">
+    <a href="{% url 'admin_login' %}"><button>🧑‍💼 Elite dream builder</button></a>
     <a href="{% url 'client_login' %}"><button>🧑‍💼 Login</button></a>
   </div>
 
