--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -101,7 +101,7 @@
 
   <div class="btn-group">
     <a href="{% url 'admin_login' %}"><button>🧑‍💼 Elite dream builder</button></a>
-    <a href="{% url 'client_login' %}"><button>🧑‍💼 Login</button></a>
+    <a href="{% url 'client_login' %}"><button>🧑‍💼 Client Login</button></a>
   </div>
 
   <script src="{% static 'js/ledger.js' %}"></script>
