--- a/ledger_system/projects/templates/projects/add_expense.html
+++ b/ledger_system/projects/templates/projects/add_expense.html
@@ -13,7 +13,7 @@
 </style>
 {% block content %}
 <div class="container mt-4">
-  <h2>Add Expense</h2>
+  <h2>Add Budget</h2>
   
   {% if success %}
     <div class="alert alert-success bg-primary" role="alert" style="color: white;">
