--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elite Dream Builders</title>
   <meta name="description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
