--- a/ledger_system/projects/templates/projects/invoice.html
+++ b/ledger_system/projects/templates/projects/invoice.html
@@ -7,6 +7,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
     <title>Invoice - {{ project.client_name }} ({{ invoice_date }})</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
