--- a/ledger_system/projects/templates/projects/client_details.html
+++ b/ledger_system/projects/templates/projects/client_details.html
@@ -5,7 +5,7 @@
 
 <head>
   <title>Client Details - {{ project.client_name }}</title>
-  
+  <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
