--- a/ledger_system/projects/templates/projects/500.html
+++ b/ledger_system/projects/templates/projects/500.html
@@ -15,6 +15,6 @@
 <body>
   <h1>500</h1>
   <p>Something went wrong on our end. Please try again later.</p>
-  <p><a href="{% url 'billing' %}">Go to Homepage</a></p>
+  <p><a href="{% url 'home' %}">Go to Homepage</a></p>
 </body>
 </html>
