--- a/ledger_system/projects/templates/projects/404.html
+++ b/ledger_system/projects/templates/projects/404.html
@@ -15,6 +15,6 @@
 <body>
   <h1>404</h1>
   <p>Oops! The page you're looking for doesn't exist.</p>
-  <p><a href="{% url 'billing' %}">Back to Home</a></p>
+  <p><a href="{% url 'home' %}">Back to Home</a></p>
 </body>
 </html>
