--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -11,6 +11,16 @@
     <meta name="author" content="The Elite Dream Builders">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "The Elite Dream Builders",
+      "url": "https://edbbilling.com",
+      "logo": "https://edbbilling.com/static/images/favicon-512x512.png"
+    }
+    </script>
+
     <style>
         body{
             width:100vw;
