--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
     <title>Elite Billing</title>
     <meta name="description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
