--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -11,6 +11,16 @@
   <meta name="keywords" content="Elite Dream Builders, login, client login, project management, construction dashboard">
   <meta name="author" content="The Elite Dream Builders">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+    <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "The Elite Dream Builders",
+    "url": "https://edbbilling.com",
+    "logo": "https://edbbilling.com/static/images/favicon-512x512.png"
+  }
+  </script>
+
   <style>
     * {
       box-sizing: border-box;
