--- a/ledger_system/projects/templates/projects/billing.html
+++ b/ledger_system/projects/templates/projects/billing.html
@@ -16,6 +16,12 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
+    <meta property="og:title" content="Welcome to The Elite Dream Builders Billing">
+    <meta property="og:description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
+    <meta property="og:image" content="https://edbbilling.com/static/images/logo.PNG">
+    <meta property="og:url" content="https://edbbilling.com">
+    <meta name="twitter:card" content="summary_large_image">
+
     <style>
         body {
             cursor: url("{% static 'images/cursor.png' %}") 16 16, auto;
