--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -12,6 +12,11 @@
     <meta name="author" content="The Elite Dream Builders">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
+    <meta property="og:title" content="Welcome to The Elite Dream Builders Billing">
+    <meta property="og:description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
+    <meta property="og:image" content="https://edbbilling.com/static/images/logo.PNG">
+    <meta property="og:url" content="https://edbbilling.com">
+    <meta name="twitter:card" content="summary_large_image">
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
