--- a/ledger_system/projects/templates/projects/daily.html
+++ b/ledger_system/projects/templates/projects/daily.html
@@ -10,6 +10,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
     <title>Daily Report</title>
+    <meta property="og:title" content="Welcome to The Elite Dream Builders Billing">
+    <meta property="og:description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
+    <meta property="og:image" content="https://edbbilling.com/static/images/logo.PNG">
+    <meta property="og:url" content="https://edbbilling.com">
+    <meta name="twitter:card" content="summary_large_image">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <style>
         body {
