--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -7,6 +7,13 @@
   <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elite Dream Builders</title>
+  
+    <meta property="og:title" content="Welcome to The Elite Dream Builders Billing">
+    <meta property="og:description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
+    <meta property="og:image" content="https://edbbilling.com/static/images/logo.PNG">
+    <meta property="og:url" content="https://edbbilling.com">
+    <meta name="twitter:card" content="summary_large_image">
+  
   <meta name="description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
   <meta name="keywords" content="Elite Dream Builders, login, client login, project management, construction dashboard">
   <meta name="author" content="The Elite Dream Builders">
