--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="{% static 'images/favicon.ico' %}" type="image/x-icon">
     <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
     <title>Elite Billing</title>
+    <meta name="google-site-verification" content="68LnzYm0TJcA1eTKG1h7ySOYL0RviN56WFJNTtRZ9b4" />
     <meta name="description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
     <meta name="keywords" content="Elite Dream Builders, login, client login, project management, construction dashboard">
     <meta name="author" content="The Elite Dream Builders">
