--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -7,7 +7,7 @@
   <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Elite Dream Builders</title>
-  
+  <meta name="google-site-verification" content="68LnzYm0TJcA1eTKG1h7ySOYL0RviN56WFJNTtRZ9b4" />
     <meta property="og:title" content="Welcome to The Elite Dream Builders Billing">
     <meta property="og:description" content="Login to your Elite Dream Builders account to view your projects, invoices, and payments.">
     <meta property="og:image" content="https://edbbilling.com/static/images/logo.PNG">
