--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -39,12 +39,18 @@
 <script type="application/ld+json">
 {
   "@context": "https://schema.org",
-  "@type": "Organization",
+  "@type": "LocalBusiness",
   "name": "The Elite Dream Builders",
-  "url": "https://edbbilling.com",
-  "logo": "https://edbbilling.com/static/images/logo.PNG"
+  "url": "https://www.edbbilling.com",
+  "logo": "https://www.edbbilling.com/static/images/logo.PNG",
+  "description": "Elite Dream Builders - View your projects, invoices, and payments online.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "IN"
+  }
 }
 </script>
+
 
   <style>
     * {
