--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -18,15 +18,21 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
   
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "The Elite Dream Builders",
-    "url": "https://edbbilling.com",
-    "logo": "https://edbbilling.com/static/images/logo.PNG"
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "The Elite Dream Builders",
+  "url": "https://www.edbbilling.com",
+  "logo": "https://www.edbbilling.com/static/images/logo.PNG",
+  "description": "Elite Dream Builders - View your projects, invoices, and payments online.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "IN"
   }
-  </script>
+}
+</script>
+
 
     <style>
         body{
