--- a/ledger_system/projects/templates/projects/client_login.html
+++ b/ledger_system/projects/templates/projects/client_login.html
@@ -8,6 +8,21 @@
   <link rel="icon" href="{% static 'images/favicon-512x512.png' %}" type="image/png">
   <title>Client Login</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" />
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "The Elite Dream Builders",
+  "url": "https://www.edbbilling.com",
+  "logo": "https://www.edbbilling.com/static/images/logo.PNG",
+  "description": "Elite Dream Builders - View your projects, invoices, and payments online.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "IN"
+  }
+}
+</script>
+
 
   <style>
     body {
