--- a/ledger_system/projects/templates/projects/base.html
+++ b/ledger_system/projects/templates/projects/base.html
@@ -16,6 +16,7 @@
   <meta property="og:url" content="https://edbbilling.com">
   <meta name="twitter:card" content="summary_large_image">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.css" />
   <link rel="stylesheet" href="{% static 'css/ledger.css' %}">
   
 <script type="application/ld+json">
