--- a/ledger_system/projects/templates/projects/index.html
+++ b/ledger_system/projects/templates/projects/index.html
@@ -61,7 +61,7 @@
 
     body {
       font-family: 'Poppins', sans-serif;
-      background: url("{% static 'images/Front2.jpg' %}");
+      background: url("https://res.cloudinary.com/doczkiibv/image/upload/v1749547388/Front2_jh9uxd.jpg");
       background-size: cover;
       background-position: center;
       width:100%;
