--- a/ledger_system/projects/templates/projects/payment_invoice.html
+++ b/ledger_system/projects/templates/projects/payment_invoice.html
@@ -267,7 +267,7 @@
             <p><strong>Invoice No:</strong> {{ invoice_number }}</p>
             <p><strong>Date:</strong> {{ invoice_date }}</p>
         </div>
-        <img src="{% static 'images/logo.PNG' %}" alt="Company Logo" style="height: 180px; margin-bottom: 10px;">
+        <img src="{% static 'images/logo.PNG'%}" alt="Company Logo" style="height: 180px; margin-bottom: 10px;">
         <h1>THE ELITE DREAM BUILDERS</h1>
         <p>NO.9, MSK BUILDING 1ST FLOOR, GANESHNAGAR, KATTUR, TRICHY-19</p>
         <p>GSTIN: 33AKTPH2053F1ZC | www.elitedreambuilders.in</p>
@@ -365,7 +365,7 @@
     <div class="qr-sign" style="text-align: left; flex: 2; min-width: 250px;">
         
         <div class="qr-code" style="display: inline-block;">
-            <img src="{% static 'images/EliteQR.jpg' %}" alt="UPI QR Code">
+            <img src="https://drive.google.com/file/d/1Glm-YhnTeaU8GdOkQ4wtgImWGtn3OFSe/view?usp=drivesdk" alt="UPI QR Code">
         </div>
     </div>
     <div class="signature" style="margin-top: 20px; text-align: right; flex: 1; min-width: 200px;">
