--- a/ledger_system/projects/templates/projects/payment_invoice.html
+++ b/ledger_system/projects/templates/projects/payment_invoice.html
@@ -365,7 +365,7 @@
     <div class="qr-sign" style="text-align: left; flex: 2; min-width: 250px;">
         
         <div class="qr-code" style="display: inline-block;">
-            <img src="https://drive.google.com/file/d/1Glm-YhnTeaU8GdOkQ4wtgImWGtn3OFSe/view?usp=drivesdk" alt="UPI QR Code">
+            <img src="https://ik.imagekit.io/zygvxqqhx/EliteQR.jpg?updatedAt=1750051235864" alt="UPI QR Code">
         </div>
     </div>
     <div class="signature" style="margin-top: 20px; text-align: right; flex: 1; min-width: 200px;">
