--- a/ledger_system/projects/templates/projects/client_details.html
+++ b/ledger_system/projects/templates/projects/client_details.html
@@ -58,7 +58,24 @@
     </p>
   </div>
 
+
   <h4 class="mb-3">Budget Details</h4>
+  <form method="get" class="row g-2 mb-4">
+  <div class="col-sm-4">
+    <input type="text" name="desc" class="form-control" placeholder="Search by description" value="{{ request.GET.desc }}">
+  </div>
+  <div class="col-sm-3">
+    <input type="date" name="from_date" class="form-control" value="{{ request.GET.from_date }}">
+  </div>
+  <div class="col-sm-3">
+    <input type="date" name="to_date" class="form-control" value="{{ request.GET.to_date }}">
+  </div>
+  <div class="col-sm-2 mt-4">
+    <button type="submit" class="btn btn-primary w-100" style="background: #2563eb;">Filter</button>
+  </div>
+</form>
+<a href="{% url 'client_details' project.id %}" class="btn btn-secondary w-100">Clear</a>
+
   {% if expenses %}
   <div class="table-responsive">
     <table class="table table-bordered main-table">
@@ -70,6 +87,7 @@
           <th>Area</th>
           <th>Unit</th>
           <th>Rate/Unit</th>
+          <th>Note</th>
           <th>Amount</th>
           <th>Actions</th>
         </tr>
@@ -82,6 +100,7 @@
           <td>{{ expense.description }}</td>
           <td>{{ expense.area }}</td>
           <td>{{ expense.unit }}</td>
+          <td>{{ expense.note|default:"-" }}</td>
           <td style="text-align: right;">{{ expense.rate }}</td>
           <td style="text-align: right;">₹{{ expense.amount|indian_currency }}</td>
           <td>
@@ -99,6 +118,28 @@
   {% endif %}
 
   <h4 class="mt-5">Payment History</h4>
+<form method="get" class="row g-2 mb-4">
+  <div class="col-sm-4">
+    <select name="payment_mode" class="form-select">
+      <option value="">All Modes</option>
+      <option value="Cash" {% if request.GET.payment_mode == 'Cash' %}selected{% endif %}>Cash</option>
+      <option value="Online" {% if request.GET.payment_mode == 'Online' %}selected{% endif %}>Online</option>
+      <option value="Cheque" {% if request.GET.payment_mode == 'Cheque' %}selected{% endif %}>Cheque</option>
+    </select>
+  </div>
+  <div class="col-sm-3">
+    <input type="date" name="pay_from" class="form-control" value="{{ request.GET.pay_from }}">
+  </div>
+  <div class="col-sm-3">
+    <input type="date" name="pay_to" class="form-control" value="{{ request.GET.pay_to }}">
+  </div>
+  <div class="col-sm-2 mt-4">
+    <button type="submit" class="btn btn-success w-100 "style="background: #2563eb;">Filter</button>
+  </div>
+</form>
+<a href="{% url 'client_details' project.id %}" class="btn btn-secondary w-100">Clear</a>
+
+
   {% if payment_rows %}
   <div class="table-responsive">
     <table class="table table-striped table-bordered">
