--- a/ledger_system/projects/templates/projects/invoice.html
+++ b/ledger_system/projects/templates/projects/invoice.html
@@ -299,7 +299,7 @@
                 </tr>
             {% endfor %}
             <tr class="total-row">
-                <td colspan="4">Total Expense</td>
+                <td colspan="4">Total Project Budget</td>
                 <td class="rupees">{{ total_expense|indian_currency }}</td>
             </tr>
             </tbody>
