--- a/ledger_system/projects/templates/projects/payment_invoice.html
+++ b/ledger_system/projects/templates/projects/payment_invoice.html
@@ -267,7 +267,7 @@
             <p><strong>Invoice No:</strong> {{ invoice_number }}</p>
             <p><strong>Date:</strong> {{ invoice_date }}</p>
         </div>
-        <img src="{% static 'images/logo.PNG'%}" alt="Company Logo" style="height: 180px; margin-bottom: 10px;">
+        <img src="{% static 'images/logo.PNG' %}" alt="Company Logo" style="height: 200px; margin-top:-50px;">
         <h1>THE ELITE DREAM BUILDERS</h1>
         <p>NO.9, MSK BUILDING 1ST FLOOR, GANESHNAGAR, KATTUR, TRICHY-19</p>
         <p>GSTIN: 33AKTPH2053F1ZC | www.elitedreambuilders.in</p>
